# httpcheck

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_PLAN.md  LICENSE  LOGGING.md  README.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  SPRINT_SUMMARY.md  TODO.md  WEEK2_SUMMARY.md  config_example.json  domains.txt  http_status_codes.txt  httpcheck.py  httpcheck_backup.py  httpcheck_menubar.py  macos_notifications.py  more_domains.txt  pyproject.toml  request_get.py  requirements-macos.txt  requirements.txt  setup.py  start_menubar.sh  test_domains.txt  test_menubar.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  pylint.yml  release.yml
docs/: OUTPUT_FORMATS.md  PYPI_PUBLICATION_GUIDE.md  TRUSTED_PUBLISHER_SETUP.md  changelog.rst  conf.py  contributing.rst  examples.rst  github_issue_drafts.md  index.rst  installation.rst  quickstart.rst  release_process.md  usage.rst
docs/api/: cli.rst  core.rst  modules.rst  utilities.rst
docs/archive/: PHASE3_WEEK7-8_SUMMARY.md  WEEK1_COMPLETION_SUMMARY.md  WEEK4_COMPLETION_SUMMARY.md  WEEK9-10_REQUEST_CUSTOMIZATION_SUMMARY.md
docs/development/: DEVELOPMENT.md  DEVELOPMENT_PLAN.md  LOGGING.md  TESTING.md
docs/releases/: CRITICAL_ITEMS_COMPLETION.md  RELEASE_NOTES_v1.4.0.md  RELEASE_v1.4.2.md  RELEASE_v1.4.2_COMPLETE.md
httpcheck/: __init__.py  cli.py  common.py  file_handler.py  logger.py  notification.py  output_formatter.py  site_checker.py  tld_manager.py  validation.py
images/: Icon.icns
tests/: README.md  __init__.py  test_cli_integration.py  test_common.py  test_file_handler.py  test_httpcheck.py  test_init.py  test_output_formats.py  test_performance.py  test_request_customization.py  test_site_checker.py  test_tld_manager.py  test_validation.py
