[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "httpcheck"
version = "1.4.0"
description = "HTTP status code checker with advanced features"
authors = [{ name = "Thomas Juul Dyhr", email = "thomas@dyhr.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]

# Core runtime dependencies only
dependencies = ["requests>=2.32.0", "tabulate>=0.9.0", "tqdm>=4.67.0"]

[project.optional-dependencies]
# macOS menu bar app dependencies
macos = [
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Foundation>=10.0",
    "pyobjc-framework-AppKit>=10.0",
    "pyobjc-core>=10.0",
]

# Development dependencies
dev = ["pytest>=7.0", "pytest-mock>=3.0", "pytest-cov>=4.0", "pylint>=3.1.0"]

# Build dependencies for macOS app
build = ["py2app>=0.28"]

[project.urls]
"Homepage" = "https://github.com/docdyhr/httpcheck"
"Bug Tracker" = "https://github.com/docdyhr/httpcheck/issues"
"Documentation" = "https://github.com/docdyhr/httpcheck/blob/master/README.md"

[project.scripts]
httpcheck = "httpcheck:main"

[tool.pylint.main]
fail-under = 10.0

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "--cov=httpcheck --cov-report=html --cov-report=term-missing --cov-fail-under=70"

[tool.setuptools]
packages = ["httpcheck"]
